--- a/style.css
+++ b/style.css
@@ -25,21 +25,49 @@ header .itens-bar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width:21vw;
 }
 
 
 a{
     text-decoration: none;transition: border-bottom 0.3s ease;
-    color:rgba(0, 0, 0, 0.671);
+    color:#838383;
+    margin-right: 38px;
 }
 
 a:hover{
     border-bottom: 2px solid orangered;
-    color:#333030;
+    color:#010101;
     font-weight: bold;
 
     
+}
+
+header .user {
+    display:flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+header .user .icon-user {
+    background-image: url('imgs/user.png');
+    width:48px;
+    height:48px;
+    margin-right: 13px;
+}
+
+header .user .name-user {
+    display:flex;
+    flex-direction: column;
+    text-align: right;
+}
+
+header .user .name-user p {
+    color:#474747;
+}
+header .user .name-user span{
+    color:#ee8913;
+    text-decoration: underline;
 }
 
 
