Adicionando o menu para mobile

--- a/style.css
+++ b/style.css
@@ -1,33 +1,34 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-
 }
-body{
-    display:flex;
+
+body {
+    display: flex;
     flex-direction: column;
     min-height: 100vh;
     overflow-y: hidden;
-    background-color: #f0f0f5;
+    background-color: #f0f0f0;
 }
-a{
-    cursor:pointer;
+
+a {
+    cursor: pointer;
 }
-header{
+
+header {
     width: 100%;
-    background-color:white;
+    background-color: white;
     height: 130px;
-    display:flex;
+    display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-header .logo{
+header .logo {
     background-image: url('imgs/logo.png');
     background-repeat: no-repeat;
-
     width: 210px;
     height: 41px;
 }
@@ -38,78 +39,76 @@ header .itens-bar {
     align-items: center;
 }
 
-
-nav a{
+nav a {
     text-decoration: none;
     transition: border 0.3s ease;
-    color:#838383;
+    color: #838383;
     user-select: none;
     cursor: pointer;
 }
 
-nav a:not(:last-child){
+nav a:not(:last-child) {
     margin-right: 38px;
 }
 
-.selected{
+.selected {
     border-bottom: 2px solid #f18d15;
-    color:#010101;
+    color: #010101;
     font-weight: bold;
-
 }
-  
 
 header .user {
-    display:flex;
+    display: flex;
     align-items: center;
     user-select: none;
     justify-content: center;
-
 }
 
 header .user .icon-user {
     background-image: url('imgs/user.png');
-    width:48px;
-    height:48px;
+    width: 48px;
+    height: 48px;
     user-select: none;
     margin-right: 13px;
 }
 
 header .user .name-user {
-    display:flex;
+    display: flex;
     flex-direction: column;
     user-select: none;
     text-align: right;
 }
 
 header .user .name-user p {
-    color:#474747;
-}
-header .user .name-user a{
-    color:#ee8913;
-    user-select: none;
-    text-decoration: none;
-   
+    color: #474747;
 }
 
-header .user .name-user a:hover{
+header .user .name-user a {
+    color: #ee8913;
+    user-select: none;
+    text-decoration: none;
+}
+
+header .user .name-user a:hover {
     user-select: none;
     text-decoration: underline;
 }
 
+header .mobile-nav {
+    display: none;
+}
 
-
-main::before{
-    content:'';
+main::before {
+    content: '';
     position: absolute;
     height: 140px;
     width: 100%;
     background-color: #f08910;
-    top:110px;
+    top: 110px;
     z-index: -1;
 }
 
-main{
+main {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -120,7 +119,8 @@ main{
     background-color: white;
     padding-top: 28px;
 }
-main a{
+
+main a {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -131,11 +131,9 @@ main a{
     background-image: linear-gradient(to bottom, #ffffff, #ebebeb);
 }
 
-
-main a:hover{
+main a:hover {
     background-image: linear-gradient(to bottom, #ffffff, #ff9f31);
     font-weight: bold;
-    
 }
 
 main .select {
@@ -151,55 +149,49 @@ main .select p {
 
 main .select p span {
     font-weight: bold;
-    
 }
 
-main .select-items{
-    display:flex;
+main .select-items {
+    display: flex;
     width: 100%;
-    align-items:stretch;
+    align-items: stretch;
     justify-content: space-evenly;
-
 }
 
-main .select-items a div.cards{
+main .select-items a div.cards {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-main .select-items a div.cards p{
+main .select-items a div.cards p {
     margin-top: 29px;
+    font-weight: bold;
 }
-main .select-items a .cards .users img{
-   src: url('imgs/icone-usuarios.png');
-   width: 100px;
-   height: 100px;
-}
-footer{
-    position: fixed;
 
+main .select-items a .cards .users img {
+    src: url('imgs/icone-usuarios.png');
+    width: 100px;
+    height: 100px;
+}
+
+footer {
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    background-color:black;
-
+    background-color: black;
     width: 100%;
     height: 45px;
-    bottom:0px;
+    bottom: 0px;
 }
-
 
 footer p {
-    color:#8c8c8c;
+    color: #8c8c8c;
 }
 
-
-footer p span{
-    color:#f59425;
-    font-weight:bold ;
-    
-
+footer p span {
+    color: #f59425;
+    font-weight: bold;
 }
