--- a/responsive.css
+++ b/responsive.css
@@ -1,76 +1,116 @@
-@media (max-width:560px){
-    *{
+@media (max-width:560px) {
+    * {
         box-sizing: border-box;
     }
-
-    body{
+    body {
         overflow-y: scroll;
-        background-color: #fff;
+        background-color: #f0f0f0;
     }
-
-    header{
+    header {
         flex-direction: column;
         justify-content: initial;
         height: 25vh;
     }
-
-    header .logo{
+    header .logo {
+        height: 10vh;
         margin-top: 16px;
+        position: static;
+        z-index: 1;
     }
-
-    header .itens-bar{
-        margin-top: 23px;
-        background-color: transparent;
+    header nav.itens-bar {
+        display: none;
     }
-
-    header .user{
-        margin-top: 10px;
-        right:10px;
+    header .user {
+        display: none;
     }
-
-    main::before{
+    header .mobile-nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px 12px;
+        background-color: blue;
+        width: 95vw;
+    }
+    header .dropdown-menu {
+        width: 46px;
+        height: 46px;
+        border-radius: 4px;
+        border: 1px solid #ee8913;
+        display: flex;
+    }
+    header .dropdown-menu label {
+        width: inherit;
+        height: inherit;
+        position: absolute;
+    }
+    header .dropdown-menu #check {
+        display: none;
+        position: absolute;
+        z-index: 1;
+    }
+    header .dropdown-menu span {
+        width: 30px;
+        height: 6px;
+        border-radius: 2px;
+        background-color: #fff;
+        position: relative;
+        top: 20px;
+        left: 7px;
+    }
+    header .dropdown-menu span:before {
+        content: '';
+        width: 30px;
+        height: 6px;
+    }
+    header .dropdown-menu .mobile-items {
+        display: none;
+    }
+    main::before {
         top: 140px;
     }
-
-    main{
-        width: 100%;
-        height: 100%;
+    main {
+        width: 94%;
+        height: 80%;
     }
-
-    main .select-items{
-        display:flex;
+    main .select {
+        font-size: 24px;
+        text-align: center;
+    }
+    main .select-items {
+        display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
-
     main .select-items a {
         width: 240px;
         /* border: 1px solid blue; */
     }
-
-
-    main .select-items a:not(:last-child){
+    main .select-items a:not(:last-child) {
         margin-bottom: 40px;
     }
-
-
+    main .select-items a:last-child {
+        margin-bottom: 30px;
+    }
     footer {
         position: static;
         font-size: 10px;
         padding: 7px;
-        bottom:0px;
+        bottom: 0px;
         margin-top: 40px;
     }
-
-
-
 }
 
-@media (max-width: 320px ) and (min-height: 568px){
-    header nav{
-        width:190px ;
+@media (max-width: 320px) and (min-height: 565px) {
+    nav a:not(:last-child) {
+        margin-right: 24px;
+    }
+    nav {
+        margin-top: 0;
+    }
+    main .select {
+        font-size: 24px;
+        text-align: center;
     }
 }
-
-
