--- a/responsive.css
+++ b/responsive.css
@@ -98,6 +98,9 @@
         padding: 10px;
         margin: 10px 0;
     }
+    header.mobile .mobile-items div {
+        font-size: 22px;
+    }
     header.mobile .mobile-items div:not(:last-child) {
         margin: 10px 0;
         color: #777777;
