--- a/style.css
+++ b/style.css
@@ -207,3 +207,19 @@ footer p span {
 .hiding {
     display: none;
 }
+
+section.pop-up {
+    background: rgba(14, 10, 20, 0.9);
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+section.pop-up .content {
+    width: 420px;
+    height: 30px;
+    background-color: #f0f0f0;
+}
