--- a/responsive.css
+++ b/responsive.css
@@ -99,7 +99,9 @@
         margin: 10px 0;
     }
     header.mobile .mobile-items div {
+        display: flex;
         font-size: 22px;
+        border-bottom: 1px solid #8888;
     }
     header.mobile .mobile-items div:not(:last-child) {
         margin: 10px 0;
